apps/base/trino/trino.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trino
  labels:
    toolkit.fluxcd.io/tenant: kog-team
