apps/base/trino/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trino
  namespace: trino
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trino.local.reinthal.me`)
      kind: Rule
      services:
        - name: trino-cluster-trino
          port: 8080
  tls:
    secretName: local-reinthal-me-tls
